testcases/pos/eval_type/add_canfail_does_not_fail.bard
(21 raisedTo {secret}) + (if true then 21 else "world")
