testcases/neg/eval_type/add_canfail_does_fail.bard
(21 raisedTo {secret}) + (if false then 21 else "world")
